--- a/argocd-helm-charts/prometheus-linuxaid/values.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/values.yaml
@@ -53,11 +53,10 @@ prometheusRule:
   service_sssd: true
   service_omsagent: true
   services: true
-  smartmon_disk_health: true
   ssacli: true
   zfsExporter: true
-  smartmon_sata: true
   zfs: true
+  smartmon: true
 alertmanager:
   version: v0.27.0
   config:
