--- a/argocd-helm-charts/relate/charts/relate/templates/pvc.yaml
+++ b/argocd-helm-charts/relate/charts/relate/templates/pvc.yaml
@@ -40,4 +40,6 @@ spec:
   resources:
     requests:
       storage: {{ default "300Mi" .Values.nginx.pvcStorage }} 
-
+  {{- if .Values.nginx.storageClass }}
+  storageClassName: {{ .Values.nginx.storageClass }}
+  {{- end }}
