(feat/capi-cluster) : allowing users to pass : extraArgs and extraVolumes to KubeAPI | files to be added in master nodes
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmControlPlane.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmControlPlane.yaml
@@ -10,9 +10,18 @@ spec:
       apiServer:
         extraArgs:
           cloud-provider: external
+          {{- if ((.Values.controlPlane).apiServer).extraArgs }}
+          {{- ((.Values.controlPlane).apiServer).extraArgs | toYaml | nindent 10 }}
+          {{- end }}
+        {{- if ((.Values.controlPlane).apiServer).extraVolumes }}
+        {{- ((.Values.controlPlane).apiServer).extraVolumes | toYaml | nindent 8 }}
+        {{- end }}
       controllerManager:
         extraArgs:
           cloud-provider: external
+    {{- if (.Values.controlPlane).files }}
+    {{- (.Values.controlPlane).files | toYaml | nindent 4 }}
+    {{- end }}
     initConfiguration:
       skipPhases:
         - addon/kube-proxy
