fixed all blackbox probes
Signed-off-by: Sanskar Bhushan <sanskar@obmondo.com>

--- a/argocd-helm-charts/argo-cd/templates/blackbox-probe.yaml
+++ b/argocd-helm-charts/argo-cd/templates/blackbox-probe.yaml
@@ -4,7 +4,7 @@ apiVersion: monitoring.coreos.com/v1
 metadata:
   name: blackbox-probe-argocd
 spec:
-  interval: 6h
+  interval: 30m
   module: http_2xx
   prober:
     url: blackbox-exporter.monitoring.svc.cluster.local:19115
@@ -12,6 +12,6 @@ spec:
     staticConfig:
       static:
         {{- range (index .Values "argo-cd" "server" "ingress" "hosts") }}
-        - {{ . }}
+        - https://{{ . }}
         {{- end }}
 {{- end}}
