--- a/argocd-helm-charts/puppetserver/templates/blackbox-probe.yaml
+++ b/argocd-helm-charts/puppetserver/templates/blackbox-probe.yaml
@@ -4,11 +4,11 @@ apiVersion: monitoring.coreos.com/v1
 metadata:
   name: blackbox-probe-argocd
 spec:
-  interval: 6h
+  interval: 30m
   module: http_2xx
   prober:
     url: blackbox-exporter.monitoring.svc.cluster.local:19115
   targets:
     staticConfig:
-      static: {{ (((((.Values).puppetserver).puppetserver).masters).fqdns).alternateServerNames }}
+      static: https://{{ (((((.Values).puppetserver).puppetserver).masters).fqdns).alternateServerNames }}
 {{- end}}
