--- a/argocd-helm-charts/sonarqube/templates/blackbox-probe.yaml
+++ b/argocd-helm-charts/sonarqube/templates/blackbox-probe.yaml
@@ -4,7 +4,7 @@ apiVersion: monitoring.coreos.com/v1
 metadata:
   name: blackbox-probe-sonarqube
 spec:
-  interval: 6h
+  interval: 30m
   module: http_2xx
   prober:
     url: blackbox-exporter.monitoring.svc.cluster.local:19115
@@ -12,6 +12,6 @@ spec:
     staticConfig:
       static:
         {{- range (((.Values).sonarqube).ingress).hosts }}
-        - {{ tpl .host $ | quote }}
+        - https://{{ .name }}{{ .path }}
         {{- end }}
 {{- end}}
