--- a/argocd-helm-charts/cluster-api/charts/cluster-api-operator/values.yaml
+++ b/argocd-helm-charts/cluster-api/charts/cluster-api-operator/values.yaml
@@ -19,13 +19,12 @@ leaderElection:
 image:
   manager:
     repository: registry.k8s.io/capi-operator/cluster-api-operator
-    tag: v0.15.0
+    tag: v0.15.1
     pullPolicy: IfNotPresent
 env:
   manager: []
-healthAddr: ":8081"
-metricsBindAddr: "127.0.0.1:8080"
-diagnosticsAddress: "8443"
+diagnosticsAddress: ":8443"
+healthAddr: ":9440"
 insecureDiagnostics: false
 watchConfigSecret: false
 imagePullSecrets: {}
