(capi-cluster) : using cluster-name + control-plane as label selectors in MachineHealthcheck
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineHealthCheck.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineHealthCheck.yaml
@@ -7,7 +7,8 @@ spec:
   maxUnhealthy: 100%
   selector:
     matchLabels:
-      cluster.x-k8s.io/control-plane: {{ .Values.global.clusterName }}-control-plane
+      cluster.x-k8s.io/cluster-name: {{ .Values.global.clusterName }}
+      cluster.x-k8s.io/control-plane: ""
   unhealthyConditions:
     - type: Ready
       status: Unknown
