(chore/capi-cluster) : minor UX improve by modifying a Helm parameter path
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmControlPlane.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmControlPlane.yaml
@@ -24,8 +24,8 @@ spec:
       controllerManager:
         extraArgs:
           cloud-provider: external
-    {{- if (.Values.controlPlane).files }}
-    files: {{- (.Values.controlPlane).files | toYaml | nindent 6 }}
+    {{- if ((.Values.controlPlane).apiServer).files }}
+    files: {{- ((.Values.controlPlane).apiServer).files | toYaml | nindent 6 }}
     {{- end }}
     initConfiguration:
       skipPhases:
