fixing probe name for puppetserver
Signed-off-by: Sanskar Bhushan <sanskar@obmondo.com>

--- a/argocd-helm-charts/puppetserver/templates/blackbox-probe.yaml
+++ b/argocd-helm-charts/puppetserver/templates/blackbox-probe.yaml
@@ -2,7 +2,7 @@
 kind: Probe
 apiVersion: monitoring.coreos.com/v1
 metadata:
-  name: blackbox-probe-argocd
+  name: blackbox-probe-puppetserver
 spec:
   interval: 30m
   module: http_2xx
