chore: renamed from cve-dict to vuls-dict

--- a/argocd-helm-charts/vuls-dictionary/templates/ingress.yaml
+++ b/argocd-helm-charts/vuls-dictionary/templates/ingress.yaml
@@ -2,9 +2,9 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "cve-dictionary.fullname" . }}
+  name: {{ include "vuls-dictionary.fullname" . }}
   labels:
-    {{- include "cve-dictionary.labels" . | nindent 4 }}
+    {{- include "vuls-dictionary.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
@@ -35,7 +35,7 @@ spec:
             {{- end }}
             backend:
               service:
-                name: {{ include "cve-dictionary.fullname" $ }}
+                name: {{ include "vuls-dictionary.fullname" $ }}
                 port:
                   number: {{ $.Values.service.port }}
           {{- end }}
