--- a/argocd-helm-charts/vuls-dictionary/Chart.yaml
+++ b/argocd-helm-charts/vuls-dictionary/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: cve-dictionary
+name: vuls-dictionary
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
