--- a/argocd-helm-charts/vuls-dictionary/templates/deployment.yaml
+++ b/argocd-helm-charts/vuls-dictionary/templates/deployment.yaml
@@ -1,14 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "cve-dictionary.fullname" . }}
+  name: {{ include "vuls-dictionary.fullname" . }}
   labels:
-    {{- include "cve-dictionary.labels" . | nindent 4 }}
+    {{- include "vuls-dictionary.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      {{- include "cve-dictionary.selectorLabels" . | nindent 6 }}
+      {{- include "vuls-dictionary.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -16,7 +16,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "cve-dictionary.labels" . | nindent 8 }}
+        {{- include "vuls-dictionary.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
@@ -25,7 +25,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "cve-dictionary.serviceAccountName" . }}
+      serviceAccountName: {{ include "vuls-dictionary.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
