--- a/argocd-helm-charts/vuls-dictionary/templates/service.yaml
+++ b/argocd-helm-charts/vuls-dictionary/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "cve-dictionary.fullname" . }}
+  name: {{ include "vuls-dictionary.fullname" . }}
   labels:
-    {{- include "cve-dictionary.labels" . | nindent 4 }}
+    {{- include "vuls-dictionary.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "cve-dictionary.selectorLabels" . | nindent 4 }}
+    {{- include "vuls-dictionary.selectorLabels" . | nindent 4 }}
