--- a/argocd-helm-charts/vuls-dictionary/templates/serviceaccount.yaml
+++ b/argocd-helm-charts/vuls-dictionary/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "cve-dictionary.serviceAccountName" . }}
+  name: {{ include "vuls-dictionary.serviceAccountName" . }}
   labels:
-    {{- include "cve-dictionary.labels" . | nindent 4 }}
+    {{- include "vuls-dictionary.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
