--- a/argocd-helm-charts/vuls-dictionary/values.yaml
+++ b/argocd-helm-charts/vuls-dictionary/values.yaml
@@ -108,3 +108,14 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+oval:
+  enabled: true
+
+cve:
+  enabled: true
+  fetchDB:
+    - nvd
+    - mitre
+    - jvn
+    - fortinet
