--- a/argocd-helm-charts/vuls-dictionary/values.yaml
+++ b/argocd-helm-charts/vuls-dictionary/values.yaml
@@ -96,8 +96,56 @@ tolerations: []
 
 affinity: {}
 
+schedule: "0 2 * * *"
+
 oval:
   enabled: true
+  fetchDB:
+    redhat:
+      - "7"
+      - "8"
+      - "9"
+    debian:
+      - "11"
+      - "12"
+    ubuntu:
+      - "20.04"
+      - "22.04"
+      - "24.04"
+    sles-server:
+      - "12"
+      - "15"
+    sles-desktop:
+      - "12"
+      - "15"
+    opensuse-leap:
+      - "15.1"
+      - "15.2"
+      - "15.3"
+      - "15.4"
+      - "15.5"
+      - "15.6"
+    opensuse:
+      - "12.1"
+      - "12.2"
+      - "12.3"
+      - "13.1"
+      - "13.2"
+    alpine:
+      - "3.10"
+      - "3.11"
+      - "3.12"
+      - "3.13"
+      - "3.14"
+      - "3.15"
+      - "3.16"
+      - "3.17"
+      - "3.18"
+      - "3.19"
+      - "3.20"
+    amazon:
+      - "2022"
+      - "2023"
 
 cve:
   enabled: true
