--- a/argocd-helm-charts/capi-cluster/charts/hetzner/values.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/values.yaml
@@ -4,8 +4,7 @@ controlPlaneLoadBalancer:
 controlPlaneEndpoint:
   port: 6443
 
-robot:
-  floating: false
+robot: true
 
 robotSSHKeysSecretName: hetzner-robot-ssh-keys
 cloudCredentialsSecretName: cloud-credentials
