--- a/argocd-helm-charts/mattermost-team-edition/templates/postgresql-logical-backup.yaml
+++ b/argocd-helm-charts/mattermost-team-edition/templates/postgresql-logical-backup.yaml
@@ -1,5 +1,5 @@
-{{ if (.Values.logicalbackup).enabled  }}
-
+{{ if (.Values.postgres.logicalbackup).enabled }}
+---
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -7,7 +7,7 @@ metadata:
 spec:
   concurrencyPolicy: Forbid
   failedJobsHistoryLimit: 1
-  schedule: {{ (.Values.logicalbackup).schedule | default "30 00 * * *" }}
+  schedule: {{ (.Values.postgres.logicalbackup).schedule | default "30 00 * * *" }}
   successfulJobsHistoryLimit: 3
   jobTemplate:
     spec:
@@ -15,7 +15,7 @@ spec:
         spec:
           containers:
             - name: logical-backup
-              image: ghcr.io/obmondo/logical-backup:latest
+              image: ghcr.io/obmondo/logical-backup:1.0.1
               imagePullPolicy: IfNotPresent
               env:
                 - name: POD_NAMESPACE
@@ -23,53 +23,76 @@ spec:
                     fieldRef:
                       apiVersion: v1
                       fieldPath: metadata.namespace
-                - name: LOGICAL_BACKUP_PROVIDER
-                  value: {{ (.Values.logicalbackup).provider | default "s3" }}
-                - name: LOGICAL_BACKUP_S3_BUCKET_SCOPE_SUFFIX
-                  value: {{ (.Values.logicalbackup).s3bucketscopesuffix | default "logicalBackup" }}
-                - name: LOGICAL_BACKUP_S3_BUCKET
-                  value: {{ (.Values.logicalbackup).s3bucket }}
-                - name: PG_VERSION
-                  value: "{{ (.Values.logicalbackup).pgversion | default "15" }}"
-                - name: PG_PORT
-                  value: "{{ (.Values.logicalbackup).pgport | default "5432" }}"
-                - name: PGSSLMODE
-                  value: {{ (.Values.logicalbackup).pgsslmode | default "require" }}
+                - name: PGHOST
+                  value: {{ .Values.postgres.host | default "mattermost-pgsql-rw" }}
+                - name: PGPASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: mattermost-pgsql-app
+                      key: password
+                - name: PGPORT
+                  value: "{{ .Values.postgres.port | default 5432 }}"
                 - name: PGUSER
-                  value: {{ (.Values.logicalbackup).pguser | default "mattermost" }}
+                  value: {{ .Values.postgres.user | default "mattermost" }}
                 - name: PGDATABASE
-                  value: {{ (.Values.logicalbackup).pgdatabase | default "mattermost" }}
+                  value: {{ .Values.postgres.db | default "mattermost" }}
                 - name: CLUSTER_NAME_LABEL
-                  value: {{ (.Values.logicalbackup).pgOperatorClusterName | default "mattermost-pgsql" }}
+                  value: {{ (.Values.postgres.logicalbackup).pgOperatorClusterName | default "mattermost-pgsql" }}
 
-              {{- if eq .Values.logicalbackup.provider "az" }}
+              {{- if eq .Values.postgres.logicalbackup.provider "az" }}
                 - name: LOGICAL_BACKUP_PROVIDER
                   value: "az"
                 - name: LOGICAL_BACKUP_AZURE_STORAGE_ACCOUNT_NAME
-                  value: {{ (.Values.logicalbackup).azurecontainer }}
+                  value: {{ (.Values.postgres.logicalbackup).storeageaccount }}
                 - name: LOGICAL_BACKUP_AZURE_STORAGE_CONTAINER
-                  value: {{ (.Values.logicalbackup).s3bucket }}
+                  value: {{ (.Values.postgres.logicalbackup).azurecontainer }}
+                - name: LOGICAL_BACKUP_AZURE_STORAGE_ACCOUNT_KEY
+                  valueFrom:
+                    secretKeyRef:
+                      key: LOGICAL_BACKUP_AZURE_STORAGE_ACCOUNT_KEY
+                      name: mattermost-pgsql-postgres-pod-env
+                - name: LOGICAL_BACKUP_S3_BUCKET
+                  value: {{ (.Values.postgres.logicalbackup).azurecontainer }}
+                - name: LOGICAL_BACKUP_S3_BUCKET_SCOPE_SUFFIX
+                  value: {{ (.Values.postgres.logicalbackup).s3bucketscopesuffix | default "logicalbackup" }}
 
-              {{- else if eq .Values.logicalbackup.provider "s3" }}
+              {{- else if eq .Values.postgres.logicalbackup.provider "s3" }}
                 - name: LOGICAL_BACKUP_PROVIDER
                   value: "s3"
                 - name: AWS_ACCESS_KEY_ID
-                  value: {{ (.Values.logicalbackup).awsaccesskeyid }}
-                - name: LOGICAL_BACKUP_S3_REGION
-                  value: {{ (.Values.logicalbackup).s3region }}
+                  valueFrom:
+                    secretKeyRef:
+                      key: AWS_ACCESS_KEY_ID
+                      name: mattermost-pgsql-postgres-pod-env
+                - name: AWS_SECRET_ACCESS_KEY
+                  valueFrom:
+                    secretKeyRef:
+                      key: AWS_SECRET_ACCESS_KEY
+                      name: mattermost-pgsql-postgres-pod-env
                 - name: LOGICAL_BACKUP_S3_ENDPOINT
-                  value: {{ (.Values.logicalbackup).s3endpoint }}
+                  value: {{ (.Values.postgres.logicalbackup).s3endpoint }}
+                - name: LOGICAL_BACKUP_PROVIDER
+                  value: "s3"
+                - name: LOGICAL_BACKUP_S3_BUCKET_SCOPE_SUFFIX
+                  value: {{ (.Values.postgres.logicalbackup).s3bucketscopesuffix | default "logicalbackup" }}
+                - name: LOGICAL_BACKUP_S3_REGION
+                  value: {{ (.Values.postgres.logicalbackup).s3region }}
+                - name: LOGICAL_BACKUP_S3_BUCKET
+                  value: {{ (.Values.postgres.logicalbackup).s3bucket }}
+                - name: LOGICAL_BACKUP_S3_RETENTION_TIME
+                  value: {{ (.Values.postgres.logicalbackup).retention }}
               {{- end }}
 
-                {{- toYaml .Values.logicalbackup.extraEnvVars | nindent 16 }}
-
+                - name: PG_VERSION
+                  value: "{{ (.Values.postgres.logicalbackup).pgversion | default 16 }}"
+                - name: POSTGRES_OPERATOR
+                  value: cngp
               resources:
                 limits:
-                  cpu: "1"
                   memory: 500Mi
                 requests:
                   cpu: 100m
-                  memory: 100Mi
+                  memory: 128Mi
               securityContext:
                 allowPrivilegeEscalation: true
                 privileged: false
@@ -78,9 +101,5 @@ spec:
               terminationMessagePolicy: File
           dnsPolicy: ClusterFirst
           restartPolicy: Never
-          serviceAccount: "{{ .Values.logicalbackup.serviceAccount | default "postgres-pod" }}"
-          serviceAccountName: "{{ .Values.logicalbackup.serviceAccountName | default "postgres-pod" }}"
           terminationGracePeriodSeconds: 300
-
 {{ end }}
-
