--- a/argocd-helm-charts/mattermost-team-edition/templates/postgresql.yaml
+++ b/argocd-helm-charts/mattermost-team-edition/templates/postgresql.yaml
@@ -1,42 +1,97 @@
-apiVersion: acid.zalan.do/v1
-kind: postgresql
+apiVersion: postgresql.cnpg.io/v1
+kind: Cluster
 metadata:
+  {{ if (.Values.postgres).recover }}
+  name: mattermost-pgsql-recover
+  {{ else }}
   name: mattermost-pgsql
-  labels:
-    velero.io/exclude-from-backup: "true"
+  {{ end }}
 spec:
-  enableLogicalBackup: {{ .Values.postgresql.logicalBackup | default "true" }}
-  env:
-{{- if .Values.postgresql.access_key_id }}
-  - name: AWS_ACCESS_KEY_ID
-    value: {{ .Values.postgresql.access_key_id }}
-{{- end }}
-{{- if .Values.postgresql.access_secret }}
-  - name: AWS_SECRET_ACCESS_KEY
-    valueFrom:
-      secretKeyRef:
-        name: {{ .Values.postgresql.access_secret | default "mattermost-pgsql-postgres-pod-env" }}
-        key: AWS_SECRET_ACCESS_KEY
-{{- end }}
-  databases:
-    mattermost: mattermost
-  enableMasterLoadBalancer: false
-  numberOfInstances: {{ ((.Values.postgresql).instance) | default 1 }}
-  postgresql:
-    version: "12"
-  teamId: mattermost
-  users:
-    mattermost:
-    - superuser
-  volume:
-    size: {{ .Values.postgresql.size }}
-    {{- if .Values.postgresql.storageClass }}
-    storageClass: {{ .Values.postgresql.storageClass }}
-    {{- end }}
+  instances: {{ ((.Values.postgres).instance) | default 1 }}
+  {{ if (.Values.postgres).recover }}
+  bootstrap:
+    recovery: mattermost-pgsql
+  {{ else }}
+  bootstrap:
+    initdb:
+      database: mattermost
+      owner: mattermost
+  {{ end }}
   resources:
     limits:
-      memory: {{ .Values.postgresql.resources.limits.memory | default "800Mi" }}
-      cpu: {{ .Values.postgresql.resources.limits.cpu | default "250m" }}
+      memory: {{ (((.Values.postgres).resources).limits).memory | default "800Mi" }}
     requests:
-      memory: {{ .Values.postgresql.resources.requests.memory | default "500Mi" }}
-      cpu: {{ .Values.postgresql.resources.requests.cpu | default "250m" }}
+      memory: {{ (((.Values.postgres).resources).requests).memory | default "500Mi" }}
+      cpu: {{ (((.Values.postgres).resources).requests).cpu | default "100m" }}
+  storage:
+    size: {{ (.Values.postgres).size }}
+    {{- if (.Values.postgres).storageClass }}
+    storageClass: {{ (.Values.postgres).storageClass }}
+    {{- end }}
+  {{- if (.Values.postgres).recover }}
+  externalClusters:
+    name: mattermost-pgsql
+    barmanObjectStore:
+      destinationPath: {{ ((.Values.postgres).backup).destinationPath }}
+      endpointURL: {{ ((.Values.postgres).backup).endpointURL }}
+      {{- if eq ((.Values.postgres).backup).cloud "aws" }}
+      s3Credentials:
+        accessKeyId:
+          name: mattermost-pgsql-backup-creds
+          key: ACCESS_KEY_ID
+        secretAccessKey:
+          name: mattermost-pgsql-backup-creds
+          key: ACCESS_SECRET_KEY
+      {{- end }}
+      {{- if eq ((.Values.postgres).backup).cloud "azure" }}
+      azureCredentials:
+        connectionString:
+          name: mattermost-pgsql-backup-creds
+          key: AZURE_CONNECTION_STRING
+        storageAccount:
+          name: mattermost-pgsql-backup-creds
+          key: AZURE_STORAGE_ACCOUNT
+        storageKey:
+          name: mattermost-pgsql-backup-creds
+          key: AZURE_STORAGE_KEY
+        storageSasToken:
+          name: mattermost-pgsql-backup-creds
+          key: AZURE_STORAGE_SAS_TOKEN
+      {{- end }}
+        wal:
+          maxParallel: 8
+  {{- end }}
+  {{- if (.Values.postgres).backup }}
+  backup:
+    barmanObjectStore:
+      destinationPath: {{ ((.Values.postgres).backup).destinationPath }}
+      endpointURL: {{ ((.Values.postgres).backup).endpointURL }}
+      {{- if eq ((.Values.postgres).backup).cloud "aws" }}
+      s3Credentials:
+        accessKeyId:
+          name: mattermost-pgsql-backup-creds
+          key: ACCESS_KEY_ID
+        secretAccessKey:
+          name: mattermost-pgsql-backup-creds
+          key: ACCESS_SECRET_KEY
+      {{- end }}
+      {{- if eq ((.Values.postgres).backup).cloud "azure" }}
+      azureCredentials:
+        connectionString:
+          name: mattermost-pgsql-backup-creds
+          key: AZURE_CONNECTION_STRING
+        storageAccount:
+          name: mattermost-pgsql-backup-creds
+          key: AZURE_STORAGE_ACCOUNT
+        storageKey:
+          name: mattermost-pgsql-backup-creds
+          key: AZURE_STORAGE_KEY
+        storageSasToken:
+          name: mattermost-pgsql-backup-creds
+          key: AZURE_STORAGE_SAS_TOKEN
+      {{- end }}
+      wal:
+        compression: gzip
+        encryption: AES256
+    retentionPolicy: "30d"
+  {{ end  }}
