--- a/argocd-helm-charts/zfs-localpv/templates/storageclass.yaml
+++ b/argocd-helm-charts/zfs-localpv/templates/storageclass.yaml
@@ -1,16 +1,20 @@
 {{- if .Values.storageClass.enabled -}}
+{{- range $className, $classOptions := .Values.storageClass }}
+{{- if ne $className "enabled" }}
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: zfs-localpv
+  name: {{ $className }}
 parameters:
-  recordsize: "4k"
-  compression: "off"
-  dedup: "off"
-  fstype: "zfs"
-  poolname: "{{ .Values.storageClass.poolName }}"
+  recordsize: {{ $classOptions.recordsize | default "4k" | quote }}
+  compression: {{ $classOptions.compression | default "off" | quote }}
+  dedup: {{ $classOptions.dedup | default "off" | quote }}
+  fstype: {{ $classOptions.fstype | default "zfs" | quote }}
+  poolname: {{ required "poolName is required for storage class " $classOptions.poolName | quote }}
+  shared: {{ $classOptions.shared | default "no" | quote }}
 provisioner: zfs.csi.openebs.io
-{{- if .Values.storageClass.reclaimPolicy }}
-reclaimPolicy: {{ toYaml .Values.storageClass.reclaimPolicy }}
-{{- end }}
+reclaimPolicy: {{ $classOptions.reclaimPolicy | default "Delete" }}
+---
+{{- end -}}
+{{- end -}}
 {{- end -}}
