feat: added thinprovision and allowVolumeExpansion in zfs local pv

--- a/argocd-helm-charts/zfs-localpv/templates/storageclass.yaml
+++ b/argocd-helm-charts/zfs-localpv/templates/storageclass.yaml
@@ -5,8 +5,10 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: {{ $className }}
+allowVolumeExpansion: {{ $classOptions.allowVolumeExpansion | default true }}
 parameters:
   recordsize: {{ $classOptions.recordsize | default "4k" | quote }}
+  thinprovision: {{ $classOptions.thinprovision | default "no" | quote }}
   compression: {{ $classOptions.compression | default "off" | quote }}
   dedup: {{ $classOptions.dedup | default "off" | quote }}
   fstype: {{ $classOptions.fstype | default "zfs" | quote }}
